# Prices_Predictor_System

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
analysis/: EDA.ipynb
pipelines/: training_pipeline.py
src/: ingest_data.py
website/: components.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/api/adapt/: route.ts
website/app/api/quiz/: route.ts
website/app/docs/: page.tsx
website/app/docs/[slug]/: page.tsx
website/app/playground/: page.tsx
website/app/quiz/: page.tsx
website/components/: AnimatedCounter.tsx  DemoSection.tsx  Footer.tsx  Hero.tsx  IntegrationLogos.tsx  Nav.tsx  ProblemSection.tsx  ProfileCards.tsx
website/components/ui/: badge.tsx  button.tsx  card.tsx
website/content/docs/: api.mdx  getting-started.mdx  profiles.mdx
website/lib/: api.ts  diff.ts
