[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurobridge"
version = "0.1.0"
description = "Cognitive accessibility middleware for AI outputs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "NeuroBridge Contributors" }
]
keywords = ["accessibility", "llm", "middleware", "neurodiversity", "nlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "openai>=1.0.0",
  "anthropic>=0.18.0",
  "pydantic>=2.0.0",
  "langchain>=0.1.0",
  "nltk>=3.8",
  "tiktoken>=0.5.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.scripts]
neurobridge = "neurobridge.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
langchain = ["langchain>=0.1.0"]
redis = ["redis>=5.0.0"]
server = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "black>=24.0.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["neurobridge*"]

[tool.setuptools.package-data]
neurobridge = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
